src/test/ui/const-generics/const-arg-type-arg-misordered.full.stderr
error[E0747]: constant provided when a type was expected
  --> $DIR/const-arg-type-arg-misordered.rs:7:35
   |
LL | fn foo<const N: usize>() -> Array<N, ()> {
   |                                   ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0747`.
